added some requests